<resources>
    <string name="app_name">TrackMate</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Iniciar Sesión</string>
    <string name="title_notifications">Registrarse</string>
    <string name="title_homepage">Inicio</string>
    <string name="title_routes">Rutas</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_profile">Perfil</string>
    <string name="title_configuration">Configuracion</string>
</resources>